bypass CDN for build process
This applies to both maintainers and users of the LESS stylesheets

--- a/components/components.less
+++ b/components/components.less
@@ -6,13 +6,13 @@
 //
 // Styleguide Components
 
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import (reference) '@{cdn}/classes.less';
+@import (reference) '@{baseURL}/classes.less';
 
-@import '@{cdn}/content.less';
-@import '@{cdn}/forms.less';
-@import '@{cdn}/headings.less';
-@import '@{cdn}/inline.less';
-@import '@{cdn}/layout.less';
-@import '@{cdn}/lists.less';
+@import '@{baseURL}/content.less';
+@import '@{baseURL}/forms.less';
+@import '@{baseURL}/headings.less';
+@import '@{baseURL}/inline.less';
+@import '@{baseURL}/layout.less';
+@import '@{baseURL}/lists.less';
