--- a/components/content/content.less
+++ b/components/content/content.less
@@ -4,8 +4,8 @@
 //
 // Styleguide Components.Content
 
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import '@{cdn}/details.less';
-@import '@{cdn}/hanging.less';
-@import '@{cdn}/pre.less';
+@import '@{baseURL}/details.less';
+@import '@{baseURL}/hanging.less';
+@import '@{baseURL}/pre.less';
