--- a/components/content/pre/pre.less
+++ b/components/content/pre/pre.less
@@ -1,4 +1,4 @@
-@import 'https://cdn.digitallinguistics.io/less/code.less';
+@import 'https://digitallinguistics.blob.core.windows.net/less/code.less';
 
 // Pre
 //
