--- a/components/forms/forms.less
+++ b/components/forms/forms.less
@@ -4,15 +4,15 @@
 //
 // Styleguide Components.Forms
 
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import (reference) 'https://cdn.digitallinguistics.io/less/classes.less';
+@import (reference) 'https://digitallinguistics.blob.core.windows.net/less/classes.less';
 
-@import '@{cdn}/button.less';
-@import '@{cdn}/field.less';
-@import '@{cdn}/fieldset.less';
-@import '@{cdn}/input.less';
-@import '@{cdn}/label.less';
-@import '@{cdn}/select.less';
-@import '@{cdn}/textarea.less';
-@import '@{cdn}/textline.less';
+@import '@{baseURL}/button.less';
+@import '@{baseURL}/field.less';
+@import '@{baseURL}/fieldset.less';
+@import '@{baseURL}/input.less';
+@import '@{baseURL}/label.less';
+@import '@{baseURL}/select.less';
+@import '@{baseURL}/textarea.less';
+@import '@{baseURL}/textline.less';
