--- a/components/forms/input/input-image.hbs
+++ b/components/forms/input/input-image.hbs
@@ -1,4 +1,4 @@
 <label class=label>
   <span>Image</span>
-  <input class=input type=image src=https://cdn.digitallinguistics.io/img/tunnel.svg>
+  <input class=input type=image src=https://digitallinguistics.blob.core.windows.net/img/tunnel.svg>
 </label>
