--- a/components/forms/textarea/textarea.less
+++ b/components/forms/textarea/textarea.less
@@ -1,4 +1,4 @@
-@import 'https://cdn.digitallinguistics.io/less/field.less';
+@import 'https://digitallinguistics.blob.core.windows.net/less/field.less';
 
 // Textarea
 //
