--- a/components/headings/headings.less
+++ b/components/headings/headings.less
@@ -4,10 +4,10 @@
 //
 // Styleguide Components.Headings
 
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import '@{cdn}/page-title.less';
-@import '@{cdn}/section-header.less';
-@import '@{cdn}/subsection-header.less';
-@import '@{cdn}/subsubsection-header.less';
-@import '@{cdn}/minor-header.less';
+@import '@{baseURL}/page-title.less';
+@import '@{baseURL}/section-header.less';
+@import '@{baseURL}/subsection-header.less';
+@import '@{baseURL}/subsubsection-header.less';
+@import '@{baseURL}/minor-header.less';
