--- a/components/inline/inline.less
+++ b/components/inline/inline.less
@@ -4,15 +4,15 @@
 //
 // Styleguide Components.Inline
 
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import '@{cdn}/abbr.less';
-@import '@{cdn}/cite.less';
-@import '@{cdn}/code.less';
-@import '@{cdn}/dfn.less';
-@import '@{cdn}/em.less';
-@import '@{cdn}/italic.less';
-@import '@{cdn}/kbd.less';
-@import '@{cdn}/link.less';
-@import '@{cdn}/strong.less';
-@import '@{cdn}/transcriptions.less';
+@import '@{baseURL}/abbr.less';
+@import '@{baseURL}/cite.less';
+@import '@{baseURL}/code.less';
+@import '@{baseURL}/dfn.less';
+@import '@{baseURL}/em.less';
+@import '@{baseURL}/italic.less';
+@import '@{baseURL}/kbd.less';
+@import '@{baseURL}/link.less';
+@import '@{baseURL}/strong.less';
+@import '@{baseURL}/transcriptions.less';
