--- a/components/inline/transcriptions/orthographic/orthographic.less
+++ b/components/inline/transcriptions/orthographic/orthographic.less
@@ -1,4 +1,4 @@
-@import 'https://cdn.digitallinguistics.io/less/unicode.less';
+@import 'https://digitallinguistics.blob.core.windows.net/less/unicode.less';
 
 // Orthographic
 //
