--- a/components/inline/transcriptions/transcriptions.less
+++ b/components/inline/transcriptions/transcriptions.less
@@ -4,9 +4,9 @@
 //
 // Styleguide Components.Inline.Transcriptions
 
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import '@{cdn}/orthographic.less';
-@import '@{cdn}/phonemic.less';
-@import '@{cdn}/phonetic.less';
-@import '@{cdn}/unicode.less';
+@import '@{baseURL}/orthographic.less';
+@import '@{baseURL}/phonemic.less';
+@import '@{baseURL}/phonetic.less';
+@import '@{baseURL}/unicode.less';
