--- a/components/layout/layout.less
+++ b/components/layout/layout.less
@@ -4,10 +4,10 @@
 //
 // Styleguide Components.Layout
 
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import (reference) '@{cdn}/classes.less';
-@import '@{cdn}/banner.less';
-@import '@{cdn}/link.less';
-@import '@{cdn}/nav.less';
-@import '@{cdn}/page-title.less';
+@import (reference) '@{baseURL}/classes.less';
+@import '@{baseURL}/banner.less';
+@import '@{baseURL}/link.less';
+@import '@{baseURL}/nav.less';
+@import '@{baseURL}/page-title.less';
