--- a/components/lists/reference-list/reference-list.less
+++ b/components/lists/reference-list/reference-list.less
@@ -1,8 +1,8 @@
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import '@{cdn}/cite.less';
-@import '@{cdn}/link.less';
-@import '@{cdn}/section-header.less';
+@import '@{baseURL}/cite.less';
+@import '@{baseURL}/link.less';
+@import '@{baseURL}/section-header.less';
 
 // Reference List
 //
