--- a/img/html/html.less
+++ b/img/html/html.less
@@ -3,6 +3,6 @@
 // An icon representing HTML or HTML files. Part of a set of icons for different file types (e.g. CSS, JS).
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/html.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/html.svg/>
 //
 // Styleguide Images.html
