--- a/img/js-logo/js-logo.less
+++ b/img/js-logo/js-logo.less
@@ -3,6 +3,6 @@
 // The official open source JavaScript logo (the letters "JS" in black on a yellow background).
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/js-logo.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/js-logo.svg/>
 //
 // Styleguide Images.js-logo
