--- a/img/json/json.less
+++ b/img/json/json.less
@@ -3,6 +3,6 @@
 // An icon representing JSON or JSON files. Part of a set of icons for different file types (e.g. HTML, CSS).
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/json.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/json.svg/>
 //
 // Styleguide Images.json
