--- a/img/octicon/octicon.less
+++ b/img/octicon/octicon.less
@@ -3,6 +3,6 @@
 // The GitHub octicon logo.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/octicon.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/octicon.svg/>
 //
 // Styleguide Images.octicon
