--- a/img/pages/pages.less
+++ b/img/pages/pages.less
@@ -3,6 +3,6 @@
 // Two pages stacked on top of one another. Useful for indicating documentation.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/pages.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/pages.svg/>
 //
 // Styleguide Images.pages
