--- a/img/sort-alpha-asc/sort-alpha-asc.less
+++ b/img/sort-alpha-asc/sort-alpha-asc.less
@@ -3,6 +3,6 @@
 // A sort icon showing the letters "A" on top of "Z" and a downward arrow. Used for indicating ascending alphabetical sort.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/sort-alpha-asc.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/sort-alpha-asc.svg/>
 //
 // Styleguide Images.sort-alpha-asc
