--- a/img/tools/tools.less
+++ b/img/tools/tools.less
@@ -3,7 +3,7 @@
 // A generic tools icon, showing a screwdriver and a wrench. Used for indicating tools in an application.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/tools.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/tools.svg/>
 //
 // Styleguide Images.tools
 
@@ -13,6 +13,6 @@
 // A colored tools icon, showing a screwdriver and wrench. Used for indicating tools in an application, when the black-and-white version (above) doesn't fit the styling.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/tools.color.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/tools.color.svg/>
 //
 // Styleguide Images.tools-color
