--- a/img/wug/wug.less
+++ b/img/wug/wug.less
@@ -3,6 +3,6 @@
 // An image of a blue wug.
 //
 // Markup:
-// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wug.svg/>
+// <img class=icon-large src=https://digitallinguistics.blob.core.windows.net/img/wug.svg/>
 //
 // Styleguide Images.wug
