--- a/img/wugbot/wugbot.less
+++ b/img/wugbot/wugbot.less
@@ -3,6 +3,6 @@
 // An image of a gray wugbot (robotic wug).
 //
 // Markup:
-// <img class=icon-large src=https://cdn.digitallinguistics.io/img/wugbot.svg/>
+// <img class=icon-large src=https://digitallinguistics.blob.core.windows.net/img/wugbot.svg/>
 //
 // Styleguide Images.wugbot
