--- a/kss/dlx.less
+++ b/kss/dlx.less
@@ -1,7 +1,7 @@
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import '@{cdn}/fonts.less';
-@import '@{cdn}/colors.less';
-@import '@{cdn}/variables.less';
-@import '@{cdn}/classes.less';
-@import '@{cdn}/components.less';
+@import '@{baseURL}/fonts.less';
+@import '@{baseURL}/colors.less';
+@import '@{baseURL}/variables.less';
+@import '@{baseURL}/classes.less';
+@import '@{baseURL}/components.less';
