--- a/components/forms/button/button.less
+++ b/components/forms/button/button.less
@@ -1,4 +1,4 @@
-@import (reference) 'https://cdn.digitallinguistics.io/less/classes.less';
+@import (reference) 'https://digitallinguistics.blob.core.windows.net/less/classes.less';
 
 // Button
 //
