--- a/components/forms/input/input.less
+++ b/components/forms/input/input.less
@@ -1,8 +1,8 @@
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import (reference) '@{cdn}/classes.less';
-@import '@{cdn}/button.less';
-@import '@{cdn}/field.less';
+@import (reference) '@{baseURL}/classes.less';
+@import '@{baseURL}/button.less';
+@import '@{baseURL}/field.less';
 
 // Input Elements
 //
