--- a/components/layout/banner/banner.less
+++ b/components/layout/banner/banner.less
@@ -1,7 +1,7 @@
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import (reference) '@{cdn}/classes.less';
-@import '@{cdn}/page-title.less';
+@import (reference) '@{baseURL}/classes.less';
+@import '@{baseURL}/page-title.less';
 
 // Banner
 //
