--- a/components/layout/nav/nav.less
+++ b/components/layout/nav/nav.less
@@ -1,7 +1,7 @@
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import (reference) '@{cdn}/classes.less';
-@import '@{cdn}/link.less';
+@import (reference) '@{baseURL}/classes.less';
+@import '@{baseURL}/link.less';
 
 // Navigation
 //
