--- a/components/lists/lists.less
+++ b/components/lists/lists.less
@@ -4,11 +4,11 @@
 //
 // Styleguide Components.Lists
 
-@cdn: 'https://cdn.digitallinguistics.io/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
 
-@import '@{cdn}/bulleted.less';
-@import '@{cdn}/cite.less';
-@import '@{cdn}/link.less';
-@import '@{cdn}/numbered.less';
-@import '@{cdn}/reference-list.less';
-@import '@{cdn}/section-header.less';
+@import '@{baseURL}/bulleted.less';
+@import '@{baseURL}/cite.less';
+@import '@{baseURL}/link.less';
+@import '@{baseURL}/numbered.less';
+@import '@{baseURL}/reference-list.less';
+@import '@{baseURL}/section-header.less';
