--- a/img/dictionary/dictionary.less
+++ b/img/dictionary/dictionary.less
@@ -3,6 +3,6 @@
 // A brown dictionary icon, with the letter D on the cover.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/dictionary.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/dictionary.svg/>
 //
 // Styleguide Images.dictionary
