--- a/img/question/question.less
+++ b/img/question/question.less
@@ -3,6 +3,6 @@
 // A question mark icon. Used for indicating help text or resources.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/question.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/question.svg/>
 //
 // Styleguide Images.question
