--- a/img/this-is-a-wug/this-is-a-wug.less
+++ b/img/this-is-a-wug/this-is-a-wug.less
@@ -3,6 +3,6 @@
 // An image of a wug with the text "This is a wug" in handwritten letters.
 //
 // Markup:
-// <img class=icon-large src=https://cdn.digitallinguistics.io/img/this-is-a-wug.svg/>
+// <img class=icon-large src=https://digitallinguistics.blob.core.windows.net/img/this-is-a-wug.svg/>
 //
 // Styleguide Images.this-is-a-wug
