--- a/img/tunnel/tunnel.less
+++ b/img/tunnel/tunnel.less
@@ -3,6 +3,6 @@
 // The DLx tunnel logo, showing a nested set of JSON square brackets and curly brackets. Used as the official logo of DLx.
 //
 // Markup:
-// <img src=https://cdn.digitallinguistics.io/img/tunnel.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/tunnel.svg/>
 //
 // Styleguide Images.tunnel
