--- a/components/components.less
+++ b/components/components.less
@@ -6,13 +6,13 @@
 //
 // Styleguide Components
 
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import (reference) '@{baseURL}/classes.less';
+@import (reference) '@{baseURL}/less/classes.less';
 
-@import '@{baseURL}/content.less';
-@import '@{baseURL}/forms.less';
-@import '@{baseURL}/headings.less';
-@import '@{baseURL}/inline.less';
-@import '@{baseURL}/layout.less';
-@import '@{baseURL}/lists.less';
+@import '@{baseURL}/less/content.less';
+@import '@{baseURL}/less/forms.less';
+@import '@{baseURL}/less/headings.less';
+@import '@{baseURL}/less/inline.less';
+@import '@{baseURL}/less/layout.less';
+@import '@{baseURL}/less/lists.less';
