--- a/components/content/content.less
+++ b/components/content/content.less
@@ -4,8 +4,8 @@
 //
 // Styleguide Components.Content
 
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import '@{baseURL}/details.less';
-@import '@{baseURL}/hanging.less';
-@import '@{baseURL}/pre.less';
+@import '@{baseURL}/less/details.less';
+@import '@{baseURL}/less/hanging.less';
+@import '@{baseURL}/less/pre.less';
