--- a/components/forms/forms.less
+++ b/components/forms/forms.less
@@ -4,15 +4,15 @@
 //
 // Styleguide Components.Forms
 
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import (reference) 'https://digitallinguistics.blob.core.windows.net/less/classes.less';
+@import (reference) '@{baseURL}/less/classes.less';
 
-@import '@{baseURL}/button.less';
-@import '@{baseURL}/field.less';
-@import '@{baseURL}/fieldset.less';
-@import '@{baseURL}/input.less';
-@import '@{baseURL}/label.less';
-@import '@{baseURL}/select.less';
-@import '@{baseURL}/textarea.less';
-@import '@{baseURL}/textline.less';
+@import '@{baseURL}/less/button.less';
+@import '@{baseURL}/less/field.less';
+@import '@{baseURL}/less/fieldset.less';
+@import '@{baseURL}/less/input.less';
+@import '@{baseURL}/less/label.less';
+@import '@{baseURL}/less/select.less';
+@import '@{baseURL}/less/textarea.less';
+@import '@{baseURL}/less/textline.less';
