--- a/components/forms/input/input.less
+++ b/components/forms/input/input.less
@@ -1,8 +1,8 @@
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import (reference) '@{baseURL}/classes.less';
-@import '@{baseURL}/button.less';
-@import '@{baseURL}/field.less';
+@import (reference) '@{baseURL}/less/classes.less';
+@import '@{baseURL}/less/button.less';
+@import '@{baseURL}/less/field.less';
 
 // Input Elements
 //
