--- a/components/headings/headings.less
+++ b/components/headings/headings.less
@@ -4,10 +4,10 @@
 //
 // Styleguide Components.Headings
 
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import '@{baseURL}/page-title.less';
-@import '@{baseURL}/section-header.less';
-@import '@{baseURL}/subsection-header.less';
-@import '@{baseURL}/subsubsection-header.less';
-@import '@{baseURL}/minor-header.less';
+@import '@{baseURL}/less/page-title.less';
+@import '@{baseURL}/less/section-header.less';
+@import '@{baseURL}/less/subsection-header.less';
+@import '@{baseURL}/less/subsubsection-header.less';
+@import '@{baseURL}/less/minor-header.less';
