--- a/components/inline/inline.less
+++ b/components/inline/inline.less
@@ -4,15 +4,15 @@
 //
 // Styleguide Components.Inline
 
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import '@{baseURL}/abbr.less';
-@import '@{baseURL}/cite.less';
-@import '@{baseURL}/code.less';
-@import '@{baseURL}/dfn.less';
-@import '@{baseURL}/em.less';
-@import '@{baseURL}/italic.less';
-@import '@{baseURL}/kbd.less';
-@import '@{baseURL}/link.less';
-@import '@{baseURL}/strong.less';
-@import '@{baseURL}/transcriptions.less';
+@import '@{baseURL}/less/abbr.less';
+@import '@{baseURL}/less/cite.less';
+@import '@{baseURL}/less/code.less';
+@import '@{baseURL}/less/dfn.less';
+@import '@{baseURL}/less/em.less';
+@import '@{baseURL}/less/italic.less';
+@import '@{baseURL}/less/kbd.less';
+@import '@{baseURL}/less/link.less';
+@import '@{baseURL}/less/strong.less';
+@import '@{baseURL}/less/transcriptions.less';
