--- a/components/inline/transcriptions/transcriptions.less
+++ b/components/inline/transcriptions/transcriptions.less
@@ -4,9 +4,9 @@
 //
 // Styleguide Components.Inline.Transcriptions
 
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import '@{baseURL}/orthographic.less';
-@import '@{baseURL}/phonemic.less';
-@import '@{baseURL}/phonetic.less';
-@import '@{baseURL}/unicode.less';
+@import '@{baseURL}/less/orthographic.less';
+@import '@{baseURL}/less/phonemic.less';
+@import '@{baseURL}/less/phonetic.less';
+@import '@{baseURL}/less/unicode.less';
