--- a/components/layout/banner/banner.less
+++ b/components/layout/banner/banner.less
@@ -1,7 +1,7 @@
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import (reference) '@{baseURL}/classes.less';
-@import '@{baseURL}/page-title.less';
+@import (reference) '@{baseURL}/less/classes.less';
+@import '@{baseURL}/less/page-title.less';
 
 // Banner
 //
