--- a/components/layout/layout.less
+++ b/components/layout/layout.less
@@ -4,10 +4,10 @@
 //
 // Styleguide Components.Layout
 
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import (reference) '@{baseURL}/classes.less';
-@import '@{baseURL}/banner.less';
-@import '@{baseURL}/link.less';
-@import '@{baseURL}/nav.less';
-@import '@{baseURL}/page-title.less';
+@import (reference) '@{baseURL}/less/classes.less';
+@import '@{baseURL}/less/banner.less';
+@import '@{baseURL}/less/link.less';
+@import '@{baseURL}/less/nav.less';
+@import '@{baseURL}/less/page-title.less';
