--- a/components/layout/nav/nav.less
+++ b/components/layout/nav/nav.less
@@ -1,7 +1,7 @@
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import (reference) '@{baseURL}/classes.less';
-@import '@{baseURL}/link.less';
+@import (reference) '@{baseURL}/less/classes.less';
+@import '@{baseURL}/less/link.less';
 
 // Navigation
 //
