--- a/components/lists/lists.less
+++ b/components/lists/lists.less
@@ -4,11 +4,11 @@
 //
 // Styleguide Components.Lists
 
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import '@{baseURL}/bulleted.less';
-@import '@{baseURL}/cite.less';
-@import '@{baseURL}/link.less';
-@import '@{baseURL}/numbered.less';
-@import '@{baseURL}/reference-list.less';
-@import '@{baseURL}/section-header.less';
+@import '@{baseURL}/less/bulleted.less';
+@import '@{baseURL}/less/cite.less';
+@import '@{baseURL}/less/link.less';
+@import '@{baseURL}/less/numbered.less';
+@import '@{baseURL}/less/reference-list.less';
+@import '@{baseURL}/less/section-header.less';
