--- a/components/lists/reference-list/reference-list.less
+++ b/components/lists/reference-list/reference-list.less
@@ -1,8 +1,8 @@
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import '@{baseURL}/cite.less';
-@import '@{baseURL}/link.less';
-@import '@{baseURL}/section-header.less';
+@import '@{baseURL}/less/cite.less';
+@import '@{baseURL}/less/link.less';
+@import '@{baseURL}/less/section-header.less';
 
 // Reference List
 //
