--- a/kss/dlx.less
+++ b/kss/dlx.less
@@ -1,7 +1,7 @@
-@baseURL: 'https://digitallinguistics.blob.core.windows.net/less';
+@baseURL: 'https://digitallinguistics.blob.core.windows.net';
 
-@import '@{baseURL}/fonts.less';
-@import '@{baseURL}/colors.less';
-@import '@{baseURL}/variables.less';
-@import '@{baseURL}/classes.less';
-@import '@{baseURL}/components.less';
+@import '@{baseURL}/less/fonts.less';
+@import '@{baseURL}/less/colors.less';
+@import '@{baseURL}/less/variables.less';
+@import '@{baseURL}/less/classes.less';
+@import '@{baseURL}/less/components.less';
