add measure variable
closes #100

--- a/globals/variables.less
+++ b/globals/variables.less
@@ -65,6 +65,14 @@
   --link-color-visited: var(--purple);
 
 
+  // --measure
+  //
+  // The maximum width for blocks of text (60em)
+  //
+  // Styleguide Variables.measure
+  --measure: 60em;
+
+
   // --padding-ipa
   //
   // Padding to use on either side of the brackets around transcriptions (`//`, `[]`, and `<>`)
