--- a/globals/colors.less
+++ b/globals/colors.less
@@ -37,7 +37,7 @@
 
   // Gray
   //
-  // $codegray            - #FAFAFA; code gray
+  // $codegray            - #F5F5F5; code gray
   // $codedarkgray        - #383A42; dark gray code
   // $darkgray            - #808080; dark gray
   // $gray                - #CCC; gray
