--- a/components/inline/code/code.less
+++ b/components/inline/code/code.less
@@ -7,12 +7,11 @@
 // Styleguide Components.Inline.code
 .code {
   background-color: var(--codegray);
-  border:           var(--border);
   border-radius:    var(--border-radius);
-  color:            var(--codedarkgray);
+  color:            var(--codedarkgray); // remove this?
   font-family:      var(--font-mono);
-  font-size:        0.75em;
   font-style:       normal;
+  margin:           0;
   padding:          var(--padding-text);
   white-space:      pre-line;
 }
