don't refer to code as a code block
closes #97

--- a/components/inline/code/code.less
+++ b/components/inline/code/code.less
@@ -1,4 +1,4 @@
-// Code Block
+// Inline Code
 //
 // The `<code>` element is used for inline code blocks (use the `<pre>` element for standalone code blocks).
 //
