remove .paragraph class

--- a/components/paragraph/paragraph.less
+++ b/components/paragraph/paragraph.less
@@ -7,9 +7,7 @@
 // .hanging - A hanging paragraph
 //
 // Styleguide Components.paragraph
-.paragraph {
-  &.hanging {
-    margin-left: 1em;
-    text-indent: -1em;
-  }
+.hanging {
+  margin-left: 1em;
+  text-indent: -1em;
 }
