add --measure variable
closes #100

--- a/globals/variables.less
+++ b/globals/variables.less
@@ -9,6 +9,14 @@
 :root {
 
 
+  // --measure
+  //
+  // The width to use for the measure (the maximum width of the text)
+  //
+  // Styleguide Variables.measure
+  --measure: 60em;
+
+
   // --padding-ipa
   //
   // Padding to use on either side of the brackets around transcriptions (`//`, `[]`, and `<>`)
