--- a/fonts/fonts.less
+++ b/fonts/fonts.less
@@ -17,11 +17,13 @@
 
   --font:
     'Fira Sans',
-    'Calibri',
+    'Noto Sans',
+    'Source Sans Pro',
+    'Segoe UI',
+    Roboto,
+    'Lucida Sans Unicode',
+    'Lucida Grande',
     'DejaVu Sans',
-    'Verdana',
-    'Arial',
-    'Helvetica',
     sans-serif;
 
   --font-mono:
