add styles for ling article, interlinear (#114, #115)
closes #114
closes #115

--- a/components/components.less
+++ b/components/components.less
@@ -6,6 +6,7 @@
 //
 // Styleguide Components
 
+@import './article/article.less';
 @import './cite/cite.less';
 @import './orthographic/orthographic.less';
 @import './paragraph/paragraph.less';
