--- a/fonts/fonts.less
+++ b/fonts/fonts.less
@@ -38,11 +38,10 @@
     'Charis SIL',
     'Gentium Plus',
     'Doulos SIL',
-    'Cambria',
     'Andika',
     'Lucida Sans Unicode',
+    'Noto Serif',
     'Times New Roman',
-    'Georgia',
     serif;
 
   --font-display:          fallback;
