remove trailing slash from SVG links
closes #116

--- a/img/bibtex/bibtex.less
+++ b/img/bibtex/bibtex.less
@@ -3,6 +3,6 @@
 // The BibTeX logo, for use when reference BibTeX files
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/bibtex.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/bibtex.svg>
 //
 // Styleguide Images.bibtex
