--- a/img/browse/browse.less
+++ b/img/browse/browse.less
@@ -3,6 +3,6 @@
 // A magnifying glass hovering over some tiles. This is the official icon for the DLx data explorer.
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/browse.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/browse.svg>
 //
 // Styleguide Images.browse
