--- a/img/js/js.less
+++ b/img/js/js.less
@@ -3,6 +3,6 @@
 // An icon representing JavaScript or JavaScript files. Part of a set of icons for different file types (e.g. HTML, CSS).
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/js.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/js.svg>
 //
 // Styleguide Images.js
