--- a/img/language/language.less
+++ b/img/language/language.less
@@ -3,6 +3,6 @@
 // A globe icon inside a speech bubble. This is used to represent the concept of language.
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/language.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/language.svg>
 //
 // Styleguide Images.language
