--- a/img/latex/latex.less
+++ b/img/latex/latex.less
@@ -3,6 +3,6 @@
 // The LaTeX logo, for use when reference LaTeX files
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/latex.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/latex.svg>
 //
 // Styleguide Images.latex
