--- a/img/letters/letters.less
+++ b/img/letters/letters.less
@@ -3,6 +3,6 @@
 // A capital letter "A" followed by a lowercase letter "a". Used for indicating fonts and typography.
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/letters.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/letters.svg>
 //
 // Styleguide Images.letters
