--- a/img/programming/programming.less
+++ b/img/programming/programming.less
@@ -3,6 +3,6 @@
 // A line drawing of a computer with code brackets on the screen. Used to represent developers, programming, or coding.
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/programming.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/programming.svg>
 //
 // Styleguide Images.programming
