--- a/img/blog/blog.less
+++ b/img/blog/blog.less
@@ -3,6 +3,6 @@
 // Generic blog icon
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/blog.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/blog.svg>
 //
 // Styleguide Images.blog
