--- a/img/browser/browser.less
+++ b/img/browser/browser.less
@@ -3,6 +3,6 @@
 // A simplified color line-drawing of a browser. This is typically more useful as a thumbnail or small image than an icon.
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/browser.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/browser.svg>
 //
 // Styleguide Images.browser
