--- a/img/css/css.less
+++ b/img/css/css.less
@@ -3,6 +3,6 @@
 // An icon representing CSS or CSS files. Part of a set of icons for different file types (e.g. JS, HTML).
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/css.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/css.svg>
 //
 // Styleguide Images.css
