--- a/img/lotus/lotus.less
+++ b/img/lotus/lotus.less
@@ -3,6 +3,6 @@
 // A stylized line drawing of a lotus flower. Used as the icon for the DLx Lotus app.
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/lotus.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/lotus.svg>
 //
 // Styleguide Images.lotus
