--- a/img/sort-alpha-desc/sort-alpha-desc.less
+++ b/img/sort-alpha-desc/sort-alpha-desc.less
@@ -3,6 +3,6 @@
 // A sort icon showing the letters "Z" on top of "A" and a downward arrow. Used for indicating descending alphabetical sort.
 //
 // Markup:
-// <img src=https://digitallinguistics.blob.core.windows.net/img/sort-alpha-desc.svg/>
+// <img src=https://digitallinguistics.blob.core.windows.net/img/sort-alpha-desc.svg>
 //
 // Styleguide Images.sort-alpha-desc
