--- a/img/this-is-a-wugbot/this-is-a-wugbot.less
+++ b/img/this-is-a-wugbot/this-is-a-wugbot.less
@@ -3,6 +3,6 @@
 // An image of a robotic wug (wugbot) with the text "This is a wugbot" in handwritten letters.
 //
 // Markup:
-// <img class=icon-large src=https://digitallinguistics.blob.core.windows.net/img/this-is-a-wugbot.svg/>
+// <img class=icon-large src=https://digitallinguistics.blob.core.windows.net/img/this-is-a-wugbot.svg>
 //
 // Styleguide Images.this-is-a-wugbot
