fix colors.less to remove Semantic UI dependency

--- a/globals/colors.less
+++ b/globals/colors.less
@@ -1,28 +1,103 @@
 // Colors
 //
-// The following colors are available as CSS variables.
+// The following colors are available as CSS variables. This theme uses the default theme colors from Semantic UI.
 //
 // Weight: 3
 //
 // Styleguide Colors
 
-@import (reference) '../semantic/src/themes/default/globals/site.variables';
-
 :root {
 
-  --black:  @black;
-  --blue:   @blue;
-  --brown:  @brown;
-  --green:  @green;
-  --gray:   @grey;
-  --olive:  @olive;
-  --orange: @orange;
-  --pink:   @pink;
-  --purple: @purple;
-  --red:    @red;
-  --teal:   @teal;
-  --violet: @violet;
-  --yellow: @yellow;
+  // --black
+  //
+  // $black - #1B1C1D; black
+  //
+  // Styleguide Colors.black
+  --black:  #1B1C1D;
+
+  // --blue
+  //
+  //$blue - #2185D0; blue
+  //
+  // Styleguide Colors.blue
+  --blue:   #2185D0;
+
+  // --brown
+  //
+  // $brown - #A5673F; brown
+  //
+  // Styleguide Colors.brown
+  --brown:  #A5673F;
+
+  // --green
+  //
+  // $green - #21BA45; green
+  //
+  // Styleguide Colors.green
+  --green:  #21BA45;
+
+  // --gray
+  //
+  // $gray - #767676; gray
+  //
+  // Styleguide Colors.gray
+  --gray:   #767676;
+
+  // --olive
+  //
+  // $olive - #B5CC18; olive
+  //
+  // Styleguide Colors.olive
+  --olive:  #B5CC18;
+
+  // --orange
+  //
+  // $orange - #F2711C; orange
+  //
+  // Styleguide Colors.orange
+  --orange: #F2711C;
+
+  // --pink
+  //
+  // $pink - #E03997; pink
+  //
+  // Styleguide Colors.pink
+  --pink:   #E03997;
+
+  // --purple
+  //
+  // $purple - #A333C8; purple
+  //
+  // Styleguide Colors.purple
+  --purple: #A333C8;
+
+  // --red
+  //
+  // $red - #DB2828; red
+  //
+  // Styleguide Colors.red
+  --red:    #DB2828;
+
+  // --teal
+  //
+  // $teal - #00B5AD; teal
+  //
+  // Styleguide Colors.teal
+  --teal:   #00B5AD;
+
+  // --violet
+  //
+  // $violet - #6435C9; violet
+  //
+  // Styleguide Colors.violet
+  --violet: #6435C9;
+
+  // --yellow
+  //
+  // $yellow - #FBBD08; yellow
+  //
+  // Styleguide Colors.yellow
+  --yellow: #FBBD08;
 
   // --wugblue
   //
