--- a/components/components.less
+++ b/components/components.less
@@ -8,8 +8,10 @@
 
 @import './article/article.less';
 @import './cite/cite.less';
+@import './interlinear/interlinear.less';
 @import './orthographic/orthographic.less';
 @import './paragraph/paragraph.less';
 @import './phonemic/phonemic.less';
 @import './phonetic/phonetic.less';
+@import './skip-link/skip-link.less';
 @import './unicode/unicode.less';
