--- a/globals/colors.less
+++ b/globals/colors.less
@@ -8,96 +8,12 @@
 
 :root {
 
-  // --black
-  //
-  // $black - #1B1C1D; black
-  //
-  // Styleguide Colors.black
-  --black:  #1B1C1D;
-
   // --blue
   //
-  //$blue - #2185D0; blue
+  //$blue - hsl(208, 100%, 43%); blue
   //
   // Styleguide Colors.blue
-  --blue:   #2185D0;
-
-  // --brown
-  //
-  // $brown - #A5673F; brown
-  //
-  // Styleguide Colors.brown
-  --brown:  #A5673F;
-
-  // --green
-  //
-  // $green - #21BA45; green
-  //
-  // Styleguide Colors.green
-  --green:  #21BA45;
-
-  // --gray
-  //
-  // $gray - #767676; gray
-  //
-  // Styleguide Colors.gray
-  --gray:   #767676;
-
-  // --olive
-  //
-  // $olive - #B5CC18; olive
-  //
-  // Styleguide Colors.olive
-  --olive:  #B5CC18;
-
-  // --orange
-  //
-  // $orange - #F2711C; orange
-  //
-  // Styleguide Colors.orange
-  --orange: #F2711C;
-
-  // --pink
-  //
-  // $pink - #E03997; pink
-  //
-  // Styleguide Colors.pink
-  --pink:   #E03997;
-
-  // --purple
-  //
-  // $purple - #A333C8; purple
-  //
-  // Styleguide Colors.purple
-  --purple: #A333C8;
-
-  // --red
-  //
-  // $red - #DB2828; red
-  //
-  // Styleguide Colors.red
-  --red:    #DB2828;
-
-  // --teal
-  //
-  // $teal - #00B5AD; teal
-  //
-  // Styleguide Colors.teal
-  --teal:   #00B5AD;
-
-  // --violet
-  //
-  // $violet - #6435C9; violet
-  //
-  // Styleguide Colors.violet
-  --violet: #6435C9;
-
-  // --yellow
-  //
-  // $yellow - #FBBD08; yellow
-  //
-  // Styleguide Colors.yellow
-  --yellow: #FBBD08;
+  --blue: hsl(208, 100%, 43%);
 
   // --wugblue
   //
