--- a/globals/variables.less
+++ b/globals/variables.less
@@ -24,5 +24,12 @@
   // Styleguide Variables.padding-ipa
   --padding-transcription: 0.15em;
 
+  // --underline-width
+  //
+  // The width of the line underneath underlined text (using border-bottom)
+  //
+  // Styleguide Variables.underline-width
+  --underline-width: 0.075em;
+
 
 }
