--- a/components/card/card.less
+++ b/components/card/card.less
@@ -7,15 +7,16 @@
 // Styleguide Components.card
 .card {
 
-  --accentColor: var(--blue);
-  --borderColor: hsl(0, 1%, 85%);
+  --accentColor:  var(--blue);
+  --borderColor:  hsl(0, 0%, 85%);
+  --borderRadius: 0.375em;
 
   background-color: white;
   box-shadow:
-    0 0 0 0.075em hsl(0, 1%, 85%),
-    0 0.075em 0.225em 0 hsl(0, 1%, 85%),
+    0 0 0 0.075em var(--borderColor),
+    0 0.075em 0.225em 0 var(--borderColor),
     0 0.225em 0 0 var(--accentColor);
-  border-radius:    0.375em;
+  border-radius:    var(--borderRadius);
   margin:           1em;
   text-align:       center;
 
