--- a/components/components.less
+++ b/components/components.less
@@ -7,6 +7,7 @@
 // Styleguide Components
 
 @import './article/article.less';
+@import './blockquote/blockquote.less';
 @import './card/card.less';
 @import './cite/cite.less';
 @import './interlinear/interlinear.less';
