--- a/components/components.less
+++ b/components/components.less
@@ -6,10 +6,12 @@
 //
 // Styleguide Components
 
+@import './abbreviation/abbreviation.less';
 @import './article/article.less';
 @import './blockquote/blockquote.less';
 @import './card/card.less';
 @import './cite/cite.less';
+@import './definition/definition.less';
 @import './interlinear/interlinear.less';
 @import './link/link.less';
 @import './orthographic/orthographic.less';
