--- a/components/components.less
+++ b/components/components.less
@@ -9,6 +9,7 @@
 @import './abbreviation/abbreviation.less';
 @import './article/article.less';
 @import './blockquote/blockquote.less';
+@import './bulleted/bulleted.less';
 @import './card/card.less';
 @import './cite/cite.less';
 @import './definition/definition.less';
