--- a/components/components.less
+++ b/components/components.less
@@ -15,6 +15,7 @@
 @import './definition/definition.less';
 @import './interlinear/interlinear.less';
 @import './link/link.less';
+@import './numbered/numbered.less';
 @import './orthographic/orthographic.less';
 @import './paragraph/paragraph.less';
 @import './phonemic/phonemic.less';
