--- a/components/card/card.less
+++ b/components/card/card.less
@@ -7,16 +7,15 @@
 // Styleguide Components.card
 .card {
 
-  --accentColor:  var(--blue);
-  --borderColor:  hsl(0, 0%, 85%);
-  --borderRadius: 0.375em;
+  --accent-color:  var(--blue);
+  --border-color:  hsl(0, 0%, 85%);
 
   background-color: white;
   box-shadow:
-    0 0 0 0.075em var(--borderColor),
-    0 0.075em 0.225em 0 var(--borderColor),
-    0 0.225em 0 0 var(--accentColor);
-  border-radius:    var(--borderRadius);
+    0 0 0 0.075em var(--border-color),
+    0 0.075em 0.225em 0 var(--border-color),
+    0 0.225em 0 0 var(--accent-color);
+  border-radius:    var(--border-radius);
   margin:           1em;
   text-align:       center;
 
