--- a/globals/variables.less
+++ b/globals/variables.less
@@ -8,6 +8,12 @@
 
 :root {
 
+  // --border-radius
+  //
+  // Border radius for text boxes
+  //
+  // Styleguide Variables.border-radius
+  --border-radius: 0.375em;
 
   // --measure
   //
@@ -16,6 +22,33 @@
   // Styleguide Variables.measure
   --measure: 60em;
 
+  // --message-background-lightness
+  //
+  // The HSL lightness to use for message backgrounds
+  //
+  // Styleguide Variables.message-background-lightness
+  --message-background-lightness: 95%;
+
+  // --message-border-lightness
+  //
+  // The HSL lightness to use for message borders
+  //
+  // Styleguide Variables.message-border-lightness
+  --message-border-lightness: 85%;
+
+  // --message-text-lightness
+  //
+  // The HSL lightness to use for text in messages
+  //
+  // Styleguide Variables.message-text-lightness
+  --message-text-lightness: 20%;
+
+  // --padding-message
+  //
+  // Padding to use in message boxes (block quotes, warnings, etc.)
+  //
+  // Styleguide Variables.padding-message
+  --padding-message: 1em 1.5em;
 
   // --padding-ipa
   //
@@ -30,6 +63,5 @@
   //
   // Styleguide Variables.underline-width
   --underline-width: 0.075em;
-
 
 }
