--- a/components/blockquote/blockquote.less
+++ b/components/blockquote/blockquote.less
@@ -7,9 +7,10 @@
 // Styleguide Components.blockquote
 .blockquote {
 
-  background-color: hsl(0, 0%, 95%);
-  border-radius:    0.375em;
-  box-shadow:       0 0 0 0.075em hsl(0, 0%, 85%);
+  background-color: hsl(0, 0%, var(--message-background-lightness));
+  border-radius:    var(--border-radius);
+  box-shadow:       0 0 0 0.075em hsl(0, 0%, var(--message-border-lightness));
+  color:            hsl(0, 0%, var(--message-text-lightness));
   padding:          1em 1.5em;
   quotes:           '“' '”' '‘' '’';
 
