--- a/components/components.less
+++ b/components/components.less
@@ -22,3 +22,4 @@
 @import './phonetic/phonetic.less';
 @import './skip-link/skip-link.less';
 @import './unicode/unicode.less';
+@import './warning/warning.less';
