--- a/components/components.less
+++ b/components/components.less
@@ -10,6 +10,7 @@
 @import './article/article.less';
 @import './blockquote/blockquote.less';
 @import './bulleted/bulleted.less';
+@import './button/button.less';
 @import './card/card.less';
 @import './cite/cite.less';
 @import './definition/definition.less';
