--- a/globals/variables.less
+++ b/globals/variables.less
@@ -36,6 +36,13 @@
   // Styleguide Variables.message-border-lightness
   --message-border-lightness: 85%;
 
+  // --message-border-saturation
+  //
+  // The HSL saturation to use for message borders
+  //
+  // Styleguide Variables.message-border-saturation
+  --message-border-saturation: 35%;
+
   // --message-text-lightness
   //
   // The HSL lightness to use for text in messages
