fix color swatches in documentation
closes #122

--- a/globals/colors.less
+++ b/globals/colors.less
@@ -13,8 +13,8 @@
   // --blue
   //
   // Colors:
-  // $blue      - hsl(208, 100%, 45%); blue
-  // $lightBlue - hsl(208, 100%, 55%); light blue
+  // $blue      - #007AE6; blue
+  // $lightBlue - #1A94FF; light blue
   //
   // Styleguide Colors.blue
   --blue-hue:       208;
@@ -23,7 +23,7 @@
 
   // --purple
   //
-  // $purple - hsl(268, 100%, 45%); purple
+  // $purple - #6B00E6; purple
   //
   // Styleguide Colors.purple
   --purple-hue: calc(var(--blue-hue) + 60);
