add Source Sans / Serif to font list
closes #123

--- a/fonts/fonts.less
+++ b/fonts/fonts.less
@@ -24,6 +24,7 @@
     'Lucida Sans Unicode',
     'Lucida Grande',
     'DejaVu Sans',
+    'Open Sans',
     sans-serif;
 
   --font-mono:
@@ -39,8 +40,10 @@
     'Gentium Plus',
     'Doulos SIL',
     'Andika',
-    'Lucida Sans Unicode',
+    'Source Serif Pro',
     'Noto Serif',
+    'Source Sans Pro',
+    'Lucida Sans Unicode',
     'Times New Roman',
     serif;
 
