--- a/components/button/button.less
+++ b/components/button/button.less
@@ -13,6 +13,7 @@
   background-color: hsl(0, 0%, 85%);
   border-radius:    var(--border-radius);
   padding:          0.5em 1em;
+  white-space:      nowrap;
 
   // NB: This declaration must precede the color declarations
   &:hover {
