FIX: line break in Charis SIL Bold Italic (#130)
closes #130

--- a/fonts/fonts.less
+++ b/fonts/fonts.less
@@ -39,6 +39,7 @@
     'Charis SIL',
     'Gentium Plus',
     'Doulos SIL',
+    'Linux Libertine',
     'Andika',
     'Source Serif Pro',
     'Noto Serif',
@@ -348,7 +349,7 @@
 // Charis SIL Bold Italic
 //
 // Markup:
-// <p style="font-family: 'Charis SIL'; font-size: 1.075em; font-weight: bold; font-style: italic;"><u>Charis SIL Bold Italic</u> is used for bolded and italicized text that requires Unicode support.</p>
+// <p style="font-family: 'Charis SIL'; font-size: 1.075em; font-weight: bold; font-style: italic;"><em>Charis SIL Bold Italic</em> is used for bolded and italicized text that requires Unicode support.</p>
 //
 // Weight: 4
 //
