link to IconSVG (#129)
closes #129

--- a/components/article/article.less
+++ b/components/article/article.less
@@ -16,6 +16,7 @@
   .examples {
 
     list-style:   none;
+    padding-top:  1em;
     padding-left: var(--example-indent);
 
     .igl {
@@ -37,6 +38,15 @@
     display:     flex;
     flex-flow:   column nowrap;
     text-align:  center;
+  }
+
+  .section-header {
+    font-size:   1.5em;
+    font-weight: bold;
+  }
+
+  .title {
+    font-size: 2em;
   }
 
 }
