move CSS variables out of :root
closes #132

--- a/components/interlinear/interlinear.less
+++ b/components/interlinear/interlinear.less
@@ -11,6 +11,7 @@
   --igl-horizontal-spacing: 1.5em;
   --igl-vertical-spacing:   0.25em;
 
+  display:     block;
   font-family: var(--font-unicode);
   line-height: 1.5;
 
