--- a/components/warning/warning.less
+++ b/components/warning/warning.less
@@ -1,3 +1,5 @@
+@import 'components/message/message.less';
+
 // Warning Message
 //
 // For warning messages
@@ -7,6 +9,8 @@
 // Styleguide Components.warning
 .warning {
 
+  .message;
+
   --warning-hue: 35;
 
   background-color: hsl(var(--warning-hue), 100%, var(--message-background-lightness));
@@ -15,6 +19,6 @@
     0 0 0 0.075em
     hsl(var(--warning-hue), var(--message-border-saturation), var(--message-border-lightness));
   color:            hsl(var(--warning-hue), 100%, var(--message-text-lightness));
-  padding:          var(--padding-message);
+  padding:          var(--message-padding);
 
 }
