--- a/components/blockquote/blockquote.less
+++ b/components/blockquote/blockquote.less
@@ -1,3 +1,5 @@
+@import (reference) 'components/message/message.less';
+
 // Block Quote
 //
 // For block quotes within a text
@@ -7,12 +9,14 @@
 // Styleguide Components.blockquote
 .blockquote {
 
+  .message;
+
   /* NOTE: LESS isn't processing HSL values stored as CSS variables (from variables.less) here */
   background-color: hsl(0, 0%, 95%);
   border-radius:    var(--border-radius);
   box-shadow:       0 0 0 0.075em hsl(0, 0%, 75%);
   color:            hsl(0, 0%, 20%);
-  padding:          var(--padding-message);
+  padding:          var(--message-padding);
   quotes:           '“' '”' '‘' '’';
 
   &::before {
