--- a/components/components.less
+++ b/components/components.less
@@ -21,6 +21,6 @@
 @import './paragraph/paragraph.less';
 @import './phonemic/phonemic.less';
 @import './phonetic/phonetic.less';
+@import './transcription/transcription.less';
 @import './skip-link/skip-link.less';
-@import './unicode/unicode.less';
 @import './warning/warning.less';
