--- a/components/message/message.less
+++ b/components/message/message.less
@@ -9,35 +9,35 @@
   //
   // The HSL lightness to use for message backgrounds
   //
-  // Styleguide Variables.message-background-lightness
+  // Styleguide Components.message.message-background-lightness
   --message-background-lightness: 95%;
 
   // --message-border-lightness
   //
   // The HSL lightness to use for message borders
   //
-  // Styleguide Variables.message-border-lightness
+  // Styleguide Components.message.message-border-lightness
   --message-border-lightness: 85%;
 
   // --message-border-saturation
   //
   // The HSL saturation to use for message borders
   //
-  // Styleguide Variables.message-border-saturation
+  // Styleguide Components.message.message-border-saturation
   --message-border-saturation: 35%;
 
   // --message-text-lightness
   //
   // The HSL lightness to use for text in messages
   //
-  // Styleguide Variables.message-text-lightness
+  // Styleguide Components.message.message-text-lightness
   --message-text-lightness: 20%;
 
-  // --padding-message
+  // --message-padding
   //
   // Padding to use in message boxes (block quotes, warnings, etc.)
   //
-  // Styleguide Variables.padding-message
+  // Styleguide Components.message.padding-message
   --message-padding: 1em 1.5em;
 
 }
